<resources>
    <string name="app_name">Coronavirus App</string>

    <string name="coronavirusTrackerText">Coronavirus Tracker</string>
    <string name="chooseYourCountryText">Choose your country</string>
    <string name="searchHint">Search…</string>
    <string name="worldwideText">Worldwide</string>
    <string name="covid19TrackerText">Covid-19 Tracker</string>
    <string name="lastUpdatedText">Last updated %s </string>
    <string name="confirmedText">Confirmed</string>
    <string name="activeText">Active</string>
    <string name="recoveredText">Recovered</string>
    <string name="deceasedText">Deceased</string>
    <string name="dateText">Date</string>
    <string name="cText">C</string>
    <string name="aText">A</string>
    <string name="rText">R</string>
    <string name="dText">D</string>
    <string name="statisticsByCountryText">Statistics by Country</string>
    <string name="latestNewsText">Latest News</string>
    <string name="statisticsWorldwideText">Statistics Worldwide</string>
    <string name="stateText">State</string>
    <string name="oopsText">Oops!</string>
    <string name="errorMessageText">Something went wrong.</string>
    <string name="pleaseTryAgainText">Please try again</string>
    <string name="noInternetConnectionText">No Internet connection</string>
    <string name="noInternetConnectionMessageText">Please check your internet connection</string>
    <string name="tryAgainText">Try again</string>
    <string name="loadingText">Loading</string>
    <string name="positiveAlertButtonText">OK</string>
    <string name="noDataFourCountryTitleText">No data</string>
    <string name="noDataFourCountryMessageText">There are no data for selected country. Please select other country.</string>
    <string name="pageComingSoonText">Page coming soon</string>
    <string name="worldWideEmoji">🌏</string>
    <string name="noResultsText">No results found!</string>
    <string name="map_id">d7eaa32f14840c45</string>
    <string name="markerErrorMessage">Something went wrong on adding markers on map</string>
    <string name="noInformationMessage">Sorry, there’re no information for your search.</string>
    <string name="checkOtherCountriesText">We will try to find it. Please check other countries in the meantime.</string>
    <string name="backToSearchText">Back to Search</string>
    <string name="nowText">now</string>
    <string name="mAgotext">%sm ago</string>
    <string name="hAgoText">%sh ago</string>
    <string name="oneMinuteAgoText">1 min ago</string>
    <string name="minsAgoText">%s mins ago</string>
    <string name="oneHourAgoText">1 hour ago</string>
    <string name="hoursAgoText">%s hours ago</string>
    <string name="oneDayAgoText">1 day ago</string>
    <string name="daysAgoText">%s days ago</string>
    <string name="oneMonthAgoText">1 month ago</string>
    <string name="monthsAgoText">%s months ago</string>
    <string name="oneYearAgoText">1 year ago</string>
    <string name="yearsAgoText">%s years ago</string>
</resources>