<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.country_selection.view.CountrySelectionFragment">

    <data>

        <variable
            name="viewModel"
            type="hr.dice.coronavirus.app.ui.country_selection.presentation.CountrySelectionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/success"
            app:successState="@{viewModel.countryList}"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="40dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:src="@drawable/back_button"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="@id/countrySelectionHeader"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@id/countrySelectionHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/countrySelectionHeader"
                app:tint="@color/cloudBurst" />

            <TextView
                android:id="@+id/countrySelectionHeader"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:text="@string/chooseYourCountryText"
                android:textColor="@color/cloudBurst"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/backButton"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/searchLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/search_view_background"
                android:backgroundTint="@color/athensGray"
                android:padding="14dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/countrySelectionHeader">

                <ImageView
                    android:id="@+id/searchIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/search"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <EditText
                    android:id="@+id/searchQueryInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    style="@style/textStyle"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:hint="@string/searchHint"
                    android:textColorHint="@color/regentGray"
                    android:background="@android:color/transparent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/searchIcon"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="10dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/worldwideItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="32dp"
                android:paddingTop="16dp"
                android:paddingEnd="32dp"
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchLayout">

                <TextView
                    android:id="@+id/worldwideIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/worldWideEmoji"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/worldwideText"
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/worldwideText"
                    android:textColor="@color/cloudBurst"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/worldwideIcon"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:alpha="0.2"
                android:background="@color/cloudBurst"
                app:layout_constraintTop_toBottomOf="@id/worldwideItem" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/countryListRecycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <TextView
                android:id="@+id/noResultsFound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textStyle"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/noResultsText"
                android:layout_marginStart="32dp"
                android:layout_marginTop="35dp"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/loading"
            app:loadingState="@{viewModel.countryList}"
            layout="@layout/loading_view"
            android:visibility="gone" />

        <include
            android:id="@+id/noInternetConnection"
            app:noInternetConnectionState="@{viewModel.countryList}"
            layout="@layout/no_internet_connection_view"
            android:visibility="gone" />

        <include
            android:id="@+id/error"
            app:errorState="@{viewModel.countryList}"
            layout="@layout/error_view"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>