<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/virusOne"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginTop="22dp"
            android:alpha="0.5"
            android:background="@drawable/virus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/virusTwo"
            android:layout_width="105dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:alpha="0.5"
            android:background="@drawable/virus"
            android:translationX="-50dp"
            app:layout_constraintBottom_toBottomOf="@id/virusOne"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/virusOne" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/worldMapAnimation"
            android:layout_width="250dp"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/virusTwo"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/world_map" />

        <TextView
            android:id="@+id/noInformationMessage"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/noInformationMessage"
            android:textColor="@color/colorLatestNewsHeader"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@id/worldMapAnimation"
            app:layout_constraintStart_toStartOf="@id/worldMapAnimation"
            app:layout_constraintTop_toBottomOf="@id/worldMapAnimation" />

        <TextView
            android:id="@+id/checkOtherCountriesText"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/checkOtherCountriesText"
            android:textColor="@color/colorLatestNewsHeader"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/worldMapAnimation"
            app:layout_constraintStart_toStartOf="@id/worldMapAnimation"
            app:layout_constraintTop_toBottomOf="@id/noInformationMessage" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backToSearch"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:backgroundTint="@color/colorButtonBackground"
            android:textColor="@color/colorButtonText"
            android:text="@string/backToSearchText"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkOtherCountriesText" />

        <View
            android:id="@+id/virusThree"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:alpha="0.5"
            android:background="@drawable/virus"
            android:translationX="22dp"
            app:layout_constraintBottom_toTopOf="@id/backToSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/backToSearch" />

        <View
            android:id="@+id/virusFour"
            android:layout_width="64dp"
            android:layout_height="56dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="50dp"
            android:alpha="0.5"
            android:background="@drawable/virus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backToSearch" />

        <View
            android:id="@+id/virusFive"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginBottom="60dp"
            android:alpha="0.5"
            android:background="@drawable/virus"
            android:translationX="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>